@@ -1,6 +1,9 @@
 New in spot 2.5.2.dev (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - "autfilt --cobuchi --small/--det" would turn a transition-based
+    co-Büchi automaton into a state-based co-Büchi.
 
 New in spot 2.5.2 (2018-03-25)
 
